添加收藏夹图标

--- a/projectProperties.json
+++ b/projectProperties.json
@@ -52,6 +52,7 @@
     "access_shared": "false",
     "access_sms_mms": "false",
     "accountCloudGuid": "f2cf187c-63fc-4f80-9200-215566ea867f",
+    "adaptivewebmanifestjson": "",
     "allJoyn": "false",
     "allowselfsignedcertificate": "false",
     "andmaxsdkkey": "None",
@@ -261,6 +262,9 @@
     "codeGeneration": "false",
     "contacts": "false",
     "cordovaModified": false,
+    "cordovaVersionInfo": {
+        "useGlobalCordova": false
+    },
     "createdVizVersion": "9.5.30",
     "createdgaversion": "9.5.30",
     "currentgaversion": "9.5.30",
@@ -289,6 +293,11 @@
     "enableProgressiveWeb": false,
     "enablePushNotificationsDW": false,
     "enableResponsive": true,
+    "enableServiceWorker": false,
+    "enableServiceWorkerHelper": false,
+    "enableViewportZooming": false,
+    "enableWindowsOfflineObjectsForWebApp": false,
+    "enableWindowsRuntimeForWebApp": false,
     "enableactionbar": false,
     "enableasyncdesktopweb": true,
     "enableasyncspa": true,
@@ -306,10 +315,12 @@
     "enablexfsdw": false,
     "enablexfsspa": false,
     "enterpriseAuthentication": "false",
+    "es5build": false,
     "exceptionalert": "true",
     "extendBottom": "false",
     "extendTop": "false",
     "fbxfolderpathkey": "",
+    "fcmsenderid": "",
     "fgcolorkey": "255,255,255",
     "generateJavaCodeForForms": "false",
     "genericexceptionalert": "false",
@@ -318,6 +329,8 @@
     "hiddenAppGroups": {},
     "hostkey": "",
     "hostkey_andwear": "",
+    "htmlheadscripttagsdesktopweb": "",
+    "htmlheadscripttagsspa": "",
     "hybdridcontextkey": "",
     "hybridaddrkey": "",
     "hybridhttpsportkey": "",
@@ -360,9 +373,11 @@
     "isA11yConfigEnabled": false,
     "isDpScaleFactor": true,
     "isI18nConfigEnabled": false,
+    "isI18nLayoutConfigEnabled": false,
     "isMVC": true,
     "isNewAppWithRespectToAndroidPackageName": "true",
     "isNewAppWithRespectToAndroidWearPackageName": "true",
+    "isScreenShotDisabledForTestReports": false,
     "keyAlias": "",
     "keyAliasandwear": "",
     "keyStoreFilePath": "",
@@ -373,6 +388,7 @@
     "mangoapptitlekey": ",,,,,,",
     "mapkey": "",
     "marginsincludedinwidgetcontainerweight": "true",
+    "metatags": "",
     "microphone": "false",
     "musicLibrary": "false",
     "mwaddrkey": "",
@@ -666,10 +682,14 @@
     "schemekey": "",
     "schemekey_andwear": "",
     "secondarytilefunctionkey": "None",
+    "seoconfigfilepath": "",
+    "serviceworkerfile": "",
+    "serviceworkerhelperfile": "",
     "sessionmanager": "Http Session Manager",
     "settings_gradle_attrs": "",
     "settings_gradle_attrs_andwear": "",
     "sharedUserCertificates": "false",
+    "sitemapxmlpath": "",
     "spaandroidtab1024basefontsize": "16",
     "spaandroidtab1280basefontsize": "18",
     "spaandroidtab800basefontsize": "14",
@@ -756,6 +776,7 @@
     "wap_spaandroidtabhdpi_fontsize": "18",
     "wap_spaandroidtabldpi_fontsize": "14",
     "wap_spaandroidtabmdpi_fontsize": "16",
+    "wap_spaandroidtabxhdpi_fontsize": "18",
     "wap_spaipad_fontsize": "17",
     "wap_spawindowstab_fontsize": "17",
     "wap_winphone320_fontsize": "12",
@@ -914,5 +935,5 @@
     "wp8textnotificationkey": "false",
     "wp8tilestemplatekey": "FLIP_TILE",
     "wp8tilestitlekey": "",
-    "xhtmlfavicokey": ""
+    "xhtmlfavicokey": "favicon.ico"
 }
