为 Apple 添加触摸图标以在浏览器中使用

--- a/projectProperties.json
+++ b/projectProperties.json
@@ -369,7 +369,7 @@
     "iphoneipadglossyeffectkey": "false",
     "iphoneloadindicatorkey": "true",
     "iphoneurlscheme": "",
-    "iphonewebshrtcutkey": "",
+    "iphonewebshrtcutkey": "apple-touch-icon.png",
     "isA11yConfigEnabled": false,
     "isDpScaleFactor": true,
     "isI18nConfigEnabled": false,
