--- a/projectProperties.json
+++ b/projectProperties.json
@@ -53,9 +53,12 @@
     "access_sms_mms": "false",
     "accountCloudGuid": "f2cf187c-63fc-4f80-9200-215566ea867f",
     "adaptivewebmanifestjson": "",
+    "addWatchBackgroundListenerToReceiveDataPayload": "false",
+    "addWatchBackgroundListenerToReceiveMessagePayload": "false",
     "allJoyn": "false",
     "allowselfsignedcertificate": "false",
     "andmaxsdkkey": "None",
+    "andminsdkkey": "5.0 (21)",
     "androidInstallLocation": "Auto",
     "androidInstallLocnPref": "false",
     "android_allowselfsignedcertificates": "None",
@@ -70,6 +73,7 @@
     "androidscreenresizeable": "false",
     "androidscreensmall": "true",
     "androidwear_allowselfsignedcertificates": "None",
+    "andtargetsdkkey": "14.0 (34)",
     "andwearapppackagekey": "com.orgname.HzhTestVoltMX001",
     "andwearappversioncode": "1",
     "andwearmaxsdkkey": "None",
@@ -322,6 +326,7 @@
     "fbxfolderpathkey": "",
     "fcmsenderid": "",
     "fgcolorkey": "255,255,255",
+    "generateAppBundle": true,
     "generateJavaCodeForForms": "false",
     "genericexceptionalert": "false",
     "gradle_properties_attrs": "",
@@ -369,7 +374,7 @@
     "iphoneipadglossyeffectkey": "false",
     "iphoneloadindicatorkey": "true",
     "iphoneurlscheme": "",
-    "iphonewebshrtcutkey": "apple-touch-icon.png",
+    "iphonewebshrtcutkey": "",
     "isA11yConfigEnabled": false,
     "isDpScaleFactor": true,
     "isI18nConfigEnabled": false,
@@ -380,8 +385,10 @@
     "isScreenShotDisabledForTestReports": false,
     "keyAlias": "",
     "keyAliasandwear": "",
+    "keyPassword": "",
     "keyStoreFilePath": "",
     "keyStoreFilePathandwear": "",
+    "keyStorePassword": "",
     "konyVizVersion": "9.5.30",
     "lastmodifiedtime": "1716714645231",
     "location": "false",
@@ -396,6 +403,7 @@
     "mwhttpsportkey": "",
     "mwportkey": "",
     "objects3D": "false",
+    "organizationidsso": "",
     "pasteboardtype": "systemlevel",
     "pathkey": "",
     "pathkey_andwear": "",
@@ -707,6 +715,11 @@
     "support64bitandwear": "false",
     "supportX86Devices": "false",
     "supportX86Devicesandwear": "false",
+    "support_arm_32bit": false,
+    "support_arm_64bit": true,
+    "support_x86_32bit": false,
+    "support_x86_64bit": false,
+    "tabletBreakPointInInches": "6",
     "tags": {
         "android": {
             "activity_child_tags": "",
@@ -935,5 +948,5 @@
     "wp8textnotificationkey": "false",
     "wp8tilestemplatekey": "FLIP_TILE",
     "wp8tilestitlekey": "",
-    "xhtmlfavicokey": "favicon.ico"
+    "xhtmlfavicokey": ""
 }
